# Virtual_Assistant_RAGbot

./: .gitignore  __init__.py  main.py  pyproject.toml
Chatbot_Workflow/: orchestration_flow.py
Chatbot_Workflow/Crew/: crew.py  initial_prompt_assessment.py
Chatbot_Workflow/Crew/config/: agents.yaml
Chatbot_Workflow/Flow/: flow.py  new_flow_for_testing_because_of_error.py
Chatbot_Workflow/Groq/: groq_chat_cache.py  groq_chat_completions.py  groq_chat_completions_test_v1.py  llama_4_scout.py
Chatbot_Workflow/RAG/chat_memory_vector_store/: __init__.py  chat_memory_vector.py  milvus_vector_store.py  ver_1_milvus_vector_chat.py
Chatbot_Workflow/RAG/personality_vector_store/: personality_vector_store.py
Chatbot_Workflow/RAG/rag_for_chat_conversation/: chat_embed_to_vector.py  chat_memory_vector.py  chat_query_engine.py  relationship between files
