[project]
name = "july-2025-multi-ai-agent-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.152.0",
    "crewai-tools>=0.59.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.11.0.post1",
    "flagembedding>=1.3.5",
    "groq>=0.30.0",
    "llama-index>=0.12.52",
    "llama-index-embeddings-cohere>=0.5.1",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-cohere>=0.5.0",
    "llama-index-llms-groq>=0.3.2",
    "llama-index-llms-openrouter>=0.3.2",
    "llama-index-vector-stores-faiss>=0.4.0",
    "llama-index-vector-stores-milvus>=0.8.7",
    "sentencepiece>=0.2.0",
]

#sentencetransformer first
#second is  uv pip install sentencepiece
#third is  uv pip install flagembedding
# flag needed sntncepc


#    "crewai==0.152.0",
#    "crewai-tools==0.59.0",
#    "docx2txt>=0.9",
#    "groq==0.30.0",
#    "langchain-groq==0.3.6",
#    "faiss-cpu==1.11.0.post1",
#    "llama-index==0.12.52",
#    "llama-index-embeddings-huggingface==0.5.5",
#    "llama-index-embeddings-cohere==0.5.1",
#    "llama-index-vector-stores-milvus==0.8.7",
#    "llama-index-vector-stores-faiss==0.4.0",
#    "llama-index-llms-openrouter==0.3.2",
#    "llama-index-llms-groq==0.3.2",
#    "sentence-transformers==0.0.0",
#    "sentencepiece==0.0.0",
#    "flagembedding==0.0.0",