[project]
name = "july-2025-multi-ai-agent-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.152.0",
    "crewai-tools>=0.59.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.11.0.post1",
    "flagembedding>=1.3.5",
    "groq>=0.30.0",
    "llama-index>=0.13.0",
    "llama-index-embeddings-cohere>=0.6.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-groq>=0.4.0",
    "llama-index-llms-openrouter>=0.4.0",
    "llama-index-vector-stores-faiss>=0.5.0",
    "llama-index-vector-stores-milvus>=0.9.0",
    "sentencepiece>=0.2.0",
]
